# SpamShield-AI

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  test_model.py
database/: spamshield.db
models/: spam_model.pkl  vectorizer.pkl
src/: database.py  evaluate.py  explain.py  highlight.py  history.py  keywords.py  predict.py  preprocess.py  train.py
src/pages/: about_developer.py  about_model.py  history_page.py  home.py  statistics.py
tests/: test_database.py  test_dataset.py  test_evaluate.py  test_predict.py  test_preprocess.py  test_tables.py  test_train.py
