[project]
name = "spamshield-ai"
version = "1.0.0"
description = "AI-Powered SMS Spam Detection System using Machine Learning, NLP, Streamlit, and SQLite."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit",
    "scikit-learn",
    "pandas",
    "numpy",
    "plotly",
    "joblib"
]